<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="fpo_short">Lorem ipsum</string>
    <string name="fpo_long">Lorem ipsum dolor sit amet</string>
    <string name="app_name" translatable="false">Save</string>
    <string name="app_subtext">Archive Your Media\n<a href="#">learn more</a></string>
    <string name="web_client_id">741316235729-ohg8quvto8ajl8qpil4r9rm1o3gfml3t.apps.googleusercontent.com</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_first_start">First Start</string>
    <string name="title_media_list">Uploads</string>
    <string name="default_tags" translatable="false">OpenArchive</string>
    <string name="action_settings">Settings</string>
    <string name="internet_archive">Internet Archive</string>
    <string name="internet_archive_description">Upload your media to a public server.</string>
    <string name="gdrive" translatable="false">Google Drive</string>
    <string name="veilid" translatable="false">Veilid</string>
    <string name="filecoin" translatable="false">Filecoin</string>
    <string name="gdrive_tm" translatable="false">Google Drive™</string>
    <string name="upload_to_gdrive">Upload to Google Drive</string>
    <string name="sign_in_or_create_an_account_with_gdrive">Sign in or create an account\nwith Google Drive</string>
    <string name="iv_content_desc">Main Image</string>
    <string name="lbl_Cancel">Cancel</string>
    <string name="lbl_ok">OK</string>
    <string name="archive_title">E-mail Confirmation</string>
    <string name="archive_message">Please confirm your e-mail address and return to connect your Internet Archive account.</string>
    <string name="current_folder_label">%1$s > %2$s</string>
    <string name="a11y_media_storage">Media storage configuration screen</string>
    <string name="info_license_deriv">Allow anyone to remix and share?</string>
    <string name="info_license_sharealike">Require them to share like you have?</string>
    <string name="info_license_comm">Allow commercial use?</string>
    <string name="menu_delete">Remove Media</string>
    <string name="no_wifi_indicator">No Wifi</string>
    <string name="hint_flag">Tap to flag as significant content</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="action_cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="prefs_use_tor_title">Turn on Onion Routing</string>
    <string name="prefs_use_tor_summary">Transfer via the Tor Network only</string>
    <string name="prefs_install_tor_summary">Please install Orbot to enable</string>
    <string name="prefs_prohibit_screenshots_title">Block screenshots</string>
    <string name="prefs_prohibit_screenshots_summary">Prevent screenshots and screen-recordings of this app.</string>
    <string name="prefs_user_interface_title">Presentation</string>
    <string name="prefs_theme_title">Theme</string>
    <string name="prefs_theme_summary">Change Save\'s theme to light/dark</string>
    <string name="prefs_theme_system">System Theme</string>
    <string name="prefs_theme_light">Light</string>
    <string name="prefs_theme_dark">Dark</string>
    <string name="prefs_theme_val_system" translatable="false">system</string>
    <string name="prefs_theme_val_light" translatable="false">light</string>
    <string name="prefs_theme_val_dark" translatable="false">dark</string>
    <string name="prefs_use_proofmode_title">Enable ProofMode</string>
    <string name="prefs_use_proofmode_summary">Capture extra metadata and notarize all media.</string>
    <string name="prefs_share_proofmode_title">ProofMode Identity</string>
    <string name="prefs_share_proofmode_summary">Share ProofMode Public Key</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="label_username">@string/prompt_email</string>
    <string name="placeholder_email_or_username">Enter an email or username</string>
    <string name="label_password">@string/prompt_password</string>
    <string name="placeholder_password">Enter a password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_incorrect_username_or_password">Incorrect username or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="importing_media">Importing media…</string>
    <string name="title_welcome">Welcome!</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="action_about">About %s</string>
    <string name="add_a_folder">Add a folder</string>
    <string name="browse_existing_folders">Browse existing folders</string>
    <string name="browse_existing">Your Media Storage</string>
    <string name="title_activity_upload_manager">Upload Manager</string>
    <string name="uploads">Uploads</string>
    <string name="uploading">Uploading…</string>
    <string name="uploading_left">Uploading… (%d left)</string>
    <string name="uploads_notification_descriptions">These notifications show up while this app is performing media uploads.</string>
    <string name="action_upload">Upload</string>
    <string name="tap_to_add">Tap the button below to add media.</string>
    <string name="tap_to_add_backend">Tap the button below to add a media server.</string>
    <string name="to_get_started_connect_to_a_server_to_store_your_media">Tap to connect to a media server.</string>
    <string name="send_directly_to_a_private_server">Send to a webdav server</string>
    <string name="upload_to_the_internet_archive">Upload to the IA</string>
    <string name="save_connects_to_webdav_compatible_servers_only_such_as_nextcloud_and_owncloud"><b><i>Save</i></b> only connects to WebDAV-compatible servers, such as Nextcloud and ownCloud.</string>
    <string name="action_next">Next</string>
    <string name="action_done">Done</string>
    <string name="status_flagged">Significant Content</string>
    <string name="select_where_to_store_your_media">First, choose your media server.\nLong-press for additional options.</string>
    <string name="you_have_successfully_connected_to_a_veilid_group">You have successfully connected to a Veilid group!</string>
    <string name="you_have_successfully_connected_to_a_private_server">You have successfully connected to a private server!</string>
    <string name="you_have_successfully_connected_to_the_internet_archive">You have successfully connected to the Internet Archive!</string>
    <string name="you_have_successfully_connected_to_gdrive">You have successfully connected to Google Drive!</string>
    <string name="you_have_successfully_connected_to_veilid">You have successfully connected to Veilid!</string>
    <string name="you_have_successfully_connected_to_filecoin">You have successfully connected to Filecoin!</string>
    <string name="you_have_successfully_connected_to">You have successfully connected to %1$s!</string>
    <string name="create_a_new_folder">Create a New Folder</string>
    <string name="edit">Edit</string>
    <string name="menu_done">Done</string>
    <string name="remove_from_app">Remove this server?</string>
    <string name="action_remove_project">Are you sure you want to remove your project?</string>
    <string name="remove">Remove</string>
    <string name="action_archive_project">Archive Project</string>
    <string name="action_unarchive_project">Unarchive Project</string>
    <string name="IA_login_error">Please login with valid Internet Archive credentials.</string>
    <string name="access_key">Access Key</string>
    <string name="secret_key">Secret Key</string>
    <string name="info_archiveorg_keys"><b><i>Save</i></b> needs your Internet Archive account\'s API keys to be able to upload media.</string>
    <string name="action_acquire_keys">Acquire Keys</string>
    <string name="new_folder">Add Folder</string>
    <string name="please_do_not_include_special_characters_in_the_name">Please use only letters and numbers in the name.</string>
    <string name="are_you_sure_you_want_to_remove_this_server_from_the_app">Are you sure you want to remove this server from the app?</string>
    <string name="folder_name_already_exists">Folder name already exists.</string>
    <string name="metadata">Metadata</string>
    <string name="confirm_remove_media">Are you sure you want to remove this Media?</string>
    <string name="popup_flag_title">Flag Significant Content</string>
    <string name="popup_flag_desc">When you flag an item, it is routed into a subfolder within the chosen project folder on the private server.</string>
    <string name="set_the_same_creative_commons_license_for_all_folders_on_this_server">Set the same Creative Commons license for ALL folders on this server.</string>
    <string name="set_unique_creative_commons_licenses_for_each_individual_folder_on_this_server">Set unique Creative Commons licenses for EACH INDIVIDUAL folder on this server.</string>
    <string name="action_install">Install</string>
    <string name="login_activity_logging_message">Logging in…</string>
    <string name="you_already_have_a_server_with_these_credentials">You already have a server with these credentials</string>
    <string name="tor_connection_exception">Unable to connect to Orbot/Tor.</string>
    <string name="tor_connection_timeout">Unable to connect to Orbot/Tor: TIMEOUT</string>
    <string name="tor_connection_invalid">Unable to connect to Orbot/Tor: INVALID</string>
    <string name="unsecured_internet_connection">Detected an unsecured internet connection</string>
    <string name="version__">Version %s</string>
    <string name="server_name_optional">Server Nickname (Optional)</string>
    <string name="add_another_account">Add Server</string>
    <string name="prefs_proofmode_key_encryption_title_all">Secure ProofMode Key Device Passcode</string>
    <string name="prefs_proofmode_key_encryption_title_biometrics">Secure ProofMode Key with Biometrics</string>
    <string name="folders">Folders</string>
    <string name="general">General</string>
    <string name="only_upload_media_when_you_are_connected_to_wi_fi">Only upload media when you are connected to Wi-Fi</string>
    <string name="proofmode">ProofMode</string>
    <string name="proofmode_permissions_explanation">ProofMode gathers metadata from local cell towers to help verify media. Android requires permission to enable this setting. Save will only use this setting to capture data and will NOT access your phone to make/manage calls.</string>
    <string name="learn_more_about_creative_commons">Learn more about Creative Commons.</string>
    <string name="health_checks_help_us_understand_why_uploads_fail">Health checks help us understand why uploads fail.</string>
    <string name="contribute_your_data_to_be_part_of_the_solution">Contribute your data to be part of the solution.</string>
    <string name="with_your_permission_we_ll_run_a_check_each_time_you_encounter_an_error_while_uploading">With your permission, we\'ll run a check each time you encounter an error while uploading.</string>
    <string name="health_checks_capture">Health checks capture</string>
    <string name="error_description">– Error description</string>
    <string name="size_and_type_of_media">– Size and type of media</string>
    <string name="number_of_retries">– Number of retries</string>
    <string name="network_type">– Network type</string>
    <string name="locale">– Locale</string>
    <string name="allow_health_checks">Allow health checks?</string>
    <string name="by_allowing_health_checks_you_give_permission_for_the_app_to_securely_send_health_check_data_to_the_s_team">By allowing health checks, you give permission for the app to securely send health check data to the %s team.</string>
    <string name="no_thanks">No thanks</string>
</resources>