<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="@style/TextAppearance.Material3.HeadlineLarge"
                android:text="@string/health_checks_help_us_understand_why_uploads_fail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="@style/MaterialAlertDialog.Material3.Body.Text"
                android:text="@string/contribute_your_data_to_be_part_of_the_solution" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.Material3.Body.Text"
                android:text="@string/with_your_permission_we_ll_run_a_check_each_time_you_encounter_an_error_while_uploading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:text="@string/health_checks_capture" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.Material3.Body.Text"
                android:text="@string/error_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.Material3.Body.Text"
                android:text="@string/size_and_type_of_media" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.Material3.Body.Text"
                android:text="@string/number_of_retries" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.Material3.Body.Text"
                android:text="@string/network_type" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.Material3.Body.Text"
                android:text="@string/locale" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:text="@string/allow_health_checks" />

            <TextView
                android:id="@+id/explainer"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                style="@style/MaterialAlertDialog.Material3.Body.Text"
                android:text="@string/by_allowing_health_checks_you_give_permission_for_the_app_to_securely_send_health_check_data_to_the_s_team" />

        </LinearLayout>

    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_thanks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>