<?xml version="1.0" encoding="UTF-8" ?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        app:selectable="false"
        app:summary="@string/proofmode_permissions_explanation" />

    <SwitchPreferenceCompat
        app:key="use_proofmode"
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:title="@string/prefs_use_proofmode_title"
        app:singleLineTitle="false"
        app:summary="@string/prefs_use_proofmode_summary" />

<!--    <SwitchPreferenceCompat-->
<!--        app:key="proofmode_key_encryption"-->
<!--        app:defaultValue="false"-->
<!--        app:iconSpaceReserved="false"-->
<!--        app:isPreferenceVisible="false"-->
<!--        app:title="@string/prefs_proofmode_key_encryption_title_all"-->
<!--        app:singleLineTitle="false"-->
<!--        app:summary="@string/prefs_proofmode_key_encryption_summary" />-->

<!--    <Preference-->
<!--        app:key="share_proofmode"-->
<!--        app:iconSpaceReserved="false"-->
<!--        app:isPreferenceVisible="false"-->
<!--        app:title="@string/prefs_share_proofmode_title"-->
<!--        app:singleLineTitle="false"-->
<!--        app:summary="@string/prefs_share_proofmode_summary" />-->

</PreferenceScreen>