<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/license_chooser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:filterTouchesWhenObscured="true"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".features.settings.EditFolderActivity"
    tools:showIn="@layout/activity_edit_folder">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_cc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="false"
            android:showText="true"
            android:textOff="@string/answer_no"
            android:textOn="@string/answer_yes" />

        <TextView
            android:id="@+id/tv_cc"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/set_unique_creative_commons_licenses_for_each_individual_folder_on_this_server"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_nd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="false"
            android:showText="true"
            android:textOff="@string/answer_no"
            android:textOn="@string/answer_yes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/info_license_deriv"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_sa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="false"
            android:gravity="center_vertical"
            android:textOff="@string/answer_no"
            android:textOn="@string/answer_yes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/info_license_sharealike"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/row_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_nc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="false"
            android:textOff="@string/answer_no"
            android:textOn="@string/answer_yes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/info_license_comm"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="https://creativecommons.org" />

    <TextView
        android:id="@+id/bt_learn_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/learn_more_about_creative_commons"
        android:textColor="@color/c23_medium_grey" />

</LinearLayout>
