<?xml version="1.0" encoding="UTF-8" ?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:layout="@layout/prefs_title"
        app:title="Secure">

        <SwitchPreferenceCompat
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="lock_with_passcode"
            app:singleLineTitle="false"
            app:title="Lock app with passcode" />

    </PreferenceCategory>

    <PreferenceCategory
        app:layout="@layout/prefs_title"
        app:title="Archive">

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"
            app:key="servers"
            app:singleLineTitle="true"
            app:summary="Manage your media storage services"
            app:title="Media Storage" />

        <ListPreference
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            app:defaultValue="higher_quality"
            app:entries="@array/array_prefs_media_compression_labels"
            app:entryValues="@array/array_prefs_media_compression_values"
            app:iconSpaceReserved="false"
            app:key="media_compression"
            app:singleLineTitle="true"
            app:summary="%s"
            app:title="Media Compression" />
    </PreferenceCategory>

    <PreferenceCategory
        app:layout="@layout/prefs_title"
        app:title="Verify">

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"
            app:key="use_proofmode"
            app:singleLineTitle="false"
            app:title="@string/proofmode" />

        <!--        <SwitchPreferenceCompat-->
        <!--            app:allowDividerAbove="false"-->
        <!--            app:allowDividerBelow="false"-->
        <!--            app:iconSpaceReserved="false"-->
        <!--            app:key="prohibit_screenshots"-->
        <!--            app:defaultValue="false"-->
        <!--            app:title="@string/prefs_prohibit_screenshots_title"-->
        <!--            app:singleLineTitle="false"-->
        <!--            app:summary="@string/prefs_prohibit_screenshots_summary" />-->

    </PreferenceCategory>

    <PreferenceCategory
        app:layout="@layout/prefs_title"
        app:title="Encrypt">

        <SwitchPreferenceCompat
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            app:defaultValue="false"
            app:enabled="true"
            app:iconSpaceReserved="false"
            app:key="use_tor"
            app:singleLineTitle="false"
            app:summary="@string/prefs_use_tor_summary"
            app:title="@string/prefs_use_tor_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:layout="@layout/prefs_title"
        app:title="Device Settings">

        <SwitchPreferenceCompat
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="upload_wifi_only"
            app:singleLineTitle="false"
            app:title="@string/only_upload_media_when_you_are_connected_to_wi_fi" />

        <ListPreference
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            app:defaultValue="@string/prefs_theme_val_system"
            app:entries="@array/ar_prefs_theme_labels"
            app:entryValues="@array/ar_prefs_theme_val"
            app:iconSpaceReserved="false"
            app:key="theme"
            app:singleLineTitle="false"
            app:summary="%s"
            app:title="@string/prefs_theme_title" />

        <Preference
            app:allowDividerAbove="true"
            app:allowDividerBelow="false"
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:key="app_version"
            app:singleLineTitle="false"
            app:summary="0.7.2.4783"
            app:title="Version" />
    </PreferenceCategory>
</PreferenceScreen>