<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:filterTouchesWhenObscured="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".features.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/bt_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/general"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/bt_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textSize="22sp"
            tools:text="Space FPO" />

        <TextView
            android:id="@+id/bt_folders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:textSize="22sp"
            android:text="@string/folders" />

        <TextView
            android:id="@+id/bt_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/action_about"
            android:textColor="@color/c23_medium_grey" />

        <TextView
            android:id="@+id/bt_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/action_privacy"
            android:textColor="@color/c23_medium_grey" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/c23_medium_grey"
            android:textSize="12sp"
            tools:text="Version 0.0.0" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/bottom_nav_padding" />

    </LinearLayout>

</ScrollView>
