<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:filterTouchesWhenObscured="true"
    android:orientation="vertical"
    tools:context=".features.folders.AddFolderActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:theme="@style/OAToolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:filterTouchesWhenObscured="true"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="20dp"
                android:gravity="center_horizontal"
                android:text="@string/select_where_to_store_your_media"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/OAOutlinedButtonStyle"
                android:id="@+id/new_folder"
                android:text="@string/add_a_folder"
                app:icon="@drawable/ic_veilid" />

            <com.google.android.material.button.MaterialButton
                style="@style/OAOutlinedButtonStyle"
                android:id="@+id/browse_folders"
                android:layout_marginTop="6dp"
                android:text="@string/browse_existing_folders"
                app:icon="@drawable/ic_veilid" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>